--- a/portfolio.html
+++ b/portfolio.html
@@ -65,7 +65,7 @@
                             </div>
                              <div class="cards-product-desc">
                                 <h2 class="sub-title-text cards-product-text">Banking App Interface Concept</h2>
-                                <p class="suboptions-descriptions-text cards-product-descriptions-desc">App</p>
+                                <p class="suboptions-descriptions-text">App</p>
                             </div>
                         </a>
                     </li>
@@ -77,7 +77,7 @@
                             </div>
                             <div class="cards-product-desc">
                                 <h2 class="sub-title-text cards-product-text">Cashless Payment</h2>
-                                <p class="suboptions-descriptions-text cards-product-descriptions-desc">Marketing</p>
+                                <p class="suboptions-descriptions-text">Marketing</p>
                             </div>
                         </a>
                     </li>
@@ -89,7 +89,7 @@
                             </div>
                             <div class="cards-product-desc">
                                 <h2 class="sub-title-text cards-product-text">Meditation App</h2>
-                                <p class="suboptions-descriptions-text cards-product-descriptions-desc">App</p>
+                                <p class="suboptions-descriptions-text">App</p>
                             </div>
                         </a>
                     </li>
@@ -101,7 +101,7 @@
                             </div>
                             <div class="cards-product-desc">
                                 <h2 class="sub-title-text cards-product-text">Taxi Service</h2>
-                                <p class="suboptions-descriptions-text cards-product-descriptions-desc">Marketing</p>
+                                <p class="suboptions-descriptions-text">Marketing</p>
                             </div>
                         </a>
                     </li>
@@ -113,7 +113,7 @@
                             </div>
                             <div class="cards-product-desc">
                                 <h2 class="sub-title-text cards-product-text">Screen Illustrations</h2>
-                                <p class="suboptions-descriptions-text cards-product-descriptions-desc">Design</p>
+                                <p class="suboptions-descriptions-text">Design</p>
                             </div>
                         </a>
                     </li>
@@ -125,7 +125,7 @@
                             </div>
                             <div class="cards-product-desc">
                                 <h2 class="sub-title-text cards-product-text">Online Courses</h2>
-                                <p class="suboptions-descriptions-text cards-product-descriptions-desc">Marketing</p>
+                                <p class="suboptions-descriptions-text">Marketing</p>
                             </div>
                         </a>
                     </li>
@@ -137,7 +137,7 @@
                             </div>
                             <div class="cards-product-desc">
                                 <h2 class="sub-title-text cards-product-text">Instagram Stories Concept</h2>
-                                <p class="suboptions-descriptions-text cards-product-descriptions-desc">Design</p>
+                                <p class="suboptions-descriptions-text">Design</p>
                             </div>
                         </a>
                     </li>
@@ -149,7 +149,7 @@
                             </div>
                             <div class="cards-product-desc">
                                 <h2 class="sub-title-text cards-product-text">Organic Food</h2>
-                                <p class="suboptions-descriptions-text cards-product-descriptions-desc">Web Site</p>
+                                <p class="suboptions-descriptions-text">Web Site</p>
                             </div>
                         </a>
                     </li>
@@ -161,7 +161,7 @@
                             </div>
                             <div class="cards-product-desc">
                                 <h2 class="sub-title-text cards-product-text">Fresh Coffee</h2>
-                                <p class="suboptions-descriptions-text cards-product-descriptions-desc">Web Site</p>
+                                <p class="suboptions-descriptions-text">Web Site</p>
                             </div>
                         </a>
                     </li>
