--- a/index.html
+++ b/index.html
@@ -512,9 +512,9 @@
     <!-- MODAL -->
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
-        <button type="button" class="modal-close-btn" data-modal-close>
+        <button type="button" class="modal-close-btn" data-modal-close="">
           <svg class="modal-icon-close" width="8" height="8">
-            <use href="./images/icons.svg#icon-person-black-18dp"></use>
+            <use href="./images/icons.svg#icon-close-black-18dp-2-1"></use>
           </svg>
         </button>
       </div>
